<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/filter_icon"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/completed_tasks_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/completed_filter"
                android:title="@string/completed_tasks_title" />
            <item
                android:id="@+id/inComplete_filter"
                android:title="@string/inCompleted_tasks_title" />

            <item
                android:id="@+id/all_filter"
                android:title="@string/all_task_title" />

        </menu>
    </item>

</menu>