<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:padding="@dimen/_20sdp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_description_label"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/task_description_editTxt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittxt_background"
            android:elevation="3dp"
            android:fontFamily="@font/righteous"
            android:gravity="top"
            android:hint="@string/description_edit_txt_hint"
            android:inputType="textMultiLine"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/save_task_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/save_btn_label"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_description_editTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>