<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
             android:layout_margin="@dimen/_10sdp"
            >

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/circle_background"
                android:padding="3dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/dialog_title"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/delete_icon"
                app:layout_constraintStart_toEndOf="@id/delete_icon"
                app:layout_constraintTop_toTopOf="@id/delete_icon" />

            <TextView
                android:id="@+id/body_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/dialog_body"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delete_icon" />

            <android.widget.Button
                android:id="@+id/dialog_positive_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittxt_background"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/delete_button_label"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dialog_negative_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body_txt" />

            <android.widget.Button
                android:id="@+id/dialog_negative_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/cancel_button_label"
                android:background = "@drawable/edittxt_background"
                android:textColor="@color/dark_grey"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dialog_positive_btn"
                app:layout_constraintTop_toTopOf="@+id/dialog_positive_btn"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>